# e-music

./: Dockerfile  LICENSE  docker-compose.yml  pyproject.toml  requirements.txt
admin/admin/: settings.py
