[tool.poetry]
name = "e-music"
version = "0.1.0"
description = ""
authors = ["jackesfonseca <jackesdafonseca@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "e_music"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.6"
djangorestframework = "^3.14.0"
django-cors-headers = "^3.13.0"
pika = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
